--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="title_news_content_activity">NewsContentActivity</string>
     <string name="title_broadcast_demo">BroadcastDemo</string>
     <string name="title_broadcast_send_demo">BroadcastSendDemo</string>
+    <string name="title_activity_login">BroadcastBestPractice</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
