--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="title_file_output">FileOutput</string>
     <string name="title_file_input">FileInput</string>
     <string name="title_shared_prefs_output">SharedPreferencesOutput</string>
+    <string name="title_shared_prefs_input">SharedPreferencesInput</string>
+    <string name="title_save_password">SavePassword</string>
 
 </resources>
