--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="title_shared_prefs_output">SharedPreferencesOutput</string>
     <string name="title_shared_prefs_input">SharedPreferencesInput</string>
     <string name="title_save_password">SavePassword</string>
+    <string name="title_sqlite_demo">SQLiteDemo</string>
 
 </resources>
