--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_sqlite_demo">SQLiteDemo</string>
     <string name="title_litepal_demo">LitePalDemo</string>
     <string name="title_runtime_permission">RuntimePermission</string>
+    <string name="title_contacts">ContactsList</string>
 
 </resources>
