--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="url_httpconnection_xml">http://192.168.70.12:8080/MyAJS/xml/get_data.xml</string>
+    <string name="url_httpconnection_json">http://192.168.70.12:8080/MyAJS/assets/get_data.json</string>
     <string name="app_name">HelloWorld</string>
     <string name="title_hello_world">HelloWorld</string>
     <string name="title_second_activity">SecondActivity</string>
@@ -36,5 +38,6 @@
     <string name="title_ok_http">OkHttp</string>
     <string name="title_parse_xml_with_pull_demo">ParseXMLWithPullDemo</string>
     <string name="title_parse_xml_with_sax_demo">ParseXMLWithSAXDemo</string>
+    <string name="title_parse_json_with_jsonobject_demo">ParseJSONWithJSONObjectDemo</string>
 
 </resources>
